added manufacturers
